Resolve #1 and #2 -- Add prisma, tailwind, basic google auth, remix setup' '

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -517,7 +517,7 @@ video {
   font-weight: 700;
 }
 
-.text-red-500 {
+.text-green-500 {
   --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
